--- a/src/app/modules/work/components/event-management/event-management.component.scss
+++ b/src/app/modules/work/components/event-management/event-management.component.scss
@@ -11,7 +11,7 @@ h6{
         background-color: #ff6c6c;
         position: relative;
         color: #FFFFFF;
-        padding: 150px 0px;
+        padding-top: 150px;
         .banner-header{
             padding: 150px 0px;
         }
