--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
@@ -1,1 +1,122 @@
-<p>automobile-usability works!</p>
+<div class="works">
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="banner-header">
+                        <h2>Automobile Usability Testing</h2>
+                        <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="container">
+                        <img src="./assets/images/works/automobile1.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="about-project">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="container">
+                    <h2>About Project</h2>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="container">
+                    <p>A multi-national automobile manufacturing company wanted to test the Design viability of a new alert system for their luxury segment vehicles to be launched Asian Market.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="image">
+        <img src="./assets/images/works/automobile2.png">
+    </div>
+    <div class="approach">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>Approach</h2>
+                    <p>To observe the user Behaviour under different conditions with the parameters of Cognition, Acceptance and Reach. Also How Culture & Environment impacts the understanding of the functionalities?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="target-strategy">
+        <div class="container">
+            <div class="target">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Testing Environment</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Vehicle was tested in Natural Environment (to the extent possible) in calm road and broad daylight condition; while other pedestrians/vehicles were passing by the testing vehicle.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="strategy">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Testing Equipments</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Vehicle was provided with the prototype installed. Prototype was simulated for different scenarios with various alerts “Visual”, “Audio” and “Haptics”.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="needs-challenges">
+        <div class="row">
+            <div class="col-md-5 left">
+                <div class="container">
+                    <h2>Testing Summary</h2>
+                </div>
+            </div>
+            <div class="col-md-7">
+                <div class="container">
+                    <div class="needs">
+                        <div class="needs-right">
+                           <p>The various touch points on user preferences, cultural impact, segment variance and the enhancements required were provided based on the exhaustive usability testing done on different user segments ranging from children, teenagers, adults, parents and elderly.</p>
+                           <p>Environmental</p>
+                            <p>Emotional</p>
+                            <p>Intellectual</p>
+                            <p>Ergonomical</p>
+                            <p>Senses</p>
+                        </div>
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="other-case-studies">
+        <div class="row">
+            <div class="col-md-6 left">
+                <h2>Other Case Studies</h2>
+                <div class="button">
+                    <div class="btn">See All Works <img src="./assets/images/home/red-arrow.png"></div>
+                </div>
+            </div>
+            <div class="col-md-6 right">
+                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
+                    <ngu-tile *nguCarouselDef="let item; let i = index">
+                        <div class="class">
+                            <div class="image">
+                                <img [src]="item.img">
+                            </div>
+                            <h3>{{ item.title }}</h3>
+                            <h4>{{ item.sub }}</h4>
+                        </div>
+                    </ngu-tile>
+                    <ul class="ngucarousel-indicator" NguCarouselPoint>
+                      <li *ngFor="let pointer of blogCarousel.pointNumbers; let i = index">
+                        <a (click)="blogCarousel.moveTo(i)" [class.active]="blogCarousel.activePoint == i">&nbsp;</a>
+                      </li>
+                    </ul>
+                </ngu-carousel>
+            </div>
+        </div>
+    </div>
+</div>
