--- a/src/app/modules/work/components/marketing/marketing.component.html
+++ b/src/app/modules/work/components/marketing/marketing.component.html
@@ -1,1 +1,158 @@
-<p>marketing works!</p>
+<div class="works">
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="banner-header">
+                        <h2>A Customer Advocacy Platform</h2>
+                        <h6>UX <span>. UI .</span><span> Web .</span><span> B2B2C</span></h6>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="container">
+                        <img src="./assets/images/works/marketing1.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="about-project">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="container">
+                    <h2>About Project</h2>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="container">
+                    <p>The platform allows to collect different source of reviews by business that enables a better reach through customer voice. All in one platform allows to keep track of different social media platform in the same place.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="image">
+        <img src="./assets/images/works/marketing2.png">
+    </div>
+    <div class="approach">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>Approach</h2>
+                    <p>Our Primary objective is to resurrect idea of "Word of Mouth" to merge with Consumer Advocacy that can enable endless possibilities.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="target-strategy">
+        <div class="container">
+            <div class="target">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Target Audience</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Start up business owners who are looking to expand their customer engagement. ustomer support team, Marketing heads of established businesses.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="strategy">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Strategy</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Enabling Customer engagement, Marketing Campaigns, Surveys, Social Proofing and Engagement, all in one place to track the Customer Advocacy over a period of time.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="needs-challenges">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>100 +</h1>
+                <h2>Users Interviewed</h2>
+            </div>
+            <div class="col-md-8">
+                <div class="needs">
+                    <div class="needs-right">
+                       <h6>Needs</h6>
+                       <p> Fast and Simple Design</p>
+                       <p> Track Activity and Daily Tasks</p>
+                       <p> Motivation & Appreciation</p>
+                       <p> Reliable Platform</p>
+                       <p> Interactive Environment</p>
+                       <p> Getting Testimonials</p>
+                       <p> Social Status</p>
+                    </div>
+                    <div class="needs-right">
+                        <h6>Challenges</h6>
+                        <p> Getting Testimonials</p>
+                        <p> Scattered Management</p>
+                        <p> Manual Work</p>
+                        <p> Losing Track of Customers</p>
+                        <p> Feedback Mechanism</p>
+                    </div>
+                    <div class="needs-right">
+                        <h6>Discovery & Analysis</h6>
+                        <p> We started from "Zero". Knowing how word of mouth spreads was worth probing the chapters of history. Discoveries were quite interesting based on why people follow certain behaviours of promoting Product/services organically instead of doing it online.- Reliable Platform</p>
+                        <p> Interactive environment</p>
+                        <p> Getting Testimonials</p>
+                        <p> Social Status</p>
+                    </div>
+                 </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="research">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-7">
+                    <h6>Converting qualitative and quantitative data collected from research into design solutions</h6>
+                    <p>With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, Feature mapping, prototyping to match our conceptual model to user's mental models.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="green-image">
+        <img src="./assets/images/works/marketing5.png">
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/marketing4.png">
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/marketing3.png">
+    </div>
+    <div class="other-case-studies">
+        <div class="row">
+            <div class="col-md-6 left">
+                <h2>Other Case Studies</h2>
+                <div class="button">
+                    <div class="btn">See All Works <img src="./assets/images/home/red-arrow.png"></div>
+                </div>
+            </div>
+            <div class="col-md-6 right">
+                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
+                    <ngu-tile *nguCarouselDef="let item; let i = index">
+                        <div class="class">
+                            <div class="image">
+                                <img [src]="item.img">
+                            </div>
+                            <h3>{{ item.title }}</h3>
+                            <h4>{{ item.sub }}</h4>
+                        </div>
+                    </ngu-tile>
+                    <ul class="ngucarousel-indicator" NguCarouselPoint>
+                      <li *ngFor="let pointer of blogCarousel.pointNumbers; let i = index">
+                        <a (click)="blogCarousel.moveTo(i)" [class.active]="blogCarousel.activePoint == i">&nbsp;</a>
+                      </li>
+                    </ul>
+                </ngu-carousel>
+            </div>
+        </div>
+    </div>
+</div>
