--- a/src/app/modules/work/components/uxahead/uxahead.component.html
+++ b/src/app/modules/work/components/uxahead/uxahead.component.html
@@ -1,1 +1,141 @@
-<p>uxahead works!</p>
+<div class="works">
+    <div class="banner">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="container">
+                    <div class="banner-header">
+                        <h2>Website for Startup</h2>
+                        <h6>UX <span>. UI .</span><span> B2C</span></h6>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <img src="./assets/images/works/uxahead 1.png">
+                </div>
+            </div>
+    </div>
+    <div class="about-project">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="container">
+                    <h2>About Project</h2>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="container">
+                    <p>UXAHEAD is a design studio based out of London, they expertise in creating seamless customer experience for online business and also for businesses with physical presence. Services they offer are Branding, Digital Marketing Strategy, Development and Online Reputation Management.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="image">
+        <img src="./assets/images/works/uxahead 2.jpg">
+    </div>
+    <div class="approach">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>Approach</h2>
+                    <p>Our goal was to communicate all of the mentioned things to their clients who are businesses that deal with the end customers of the service or the product</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="target-strategy">
+        <div class="container">
+            <div class="target">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Target Audience</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Local businesses, Professional Consultants, Online business, Design Team, Store Shops.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="strategy">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Strategy</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Helping Local and International business to get better user and customer experience providing tailored UX Consulting and Digital media marketing to get most out of their online channel.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="image">
+        <img src="./assets/images/works/uxahead 4.png">
+    </div>
+    <div class="research">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-7">
+                    <h6>Converting qualitative data collected Stake holder Interview into design solutions</h6>
+                    <p>With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, prototyping, Brand Identity to match our conceptual model to user’s mental models.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="work-description">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h6>Logo Story</h6>
+                    <p>The primary goal of the branding exercise was to create an identity that shows focus and progress. For which we started with the kickoff discussion about the vision of the brand. There after going about creating the Moodboard for inspiration, brainstorming and design direction. Our process helped us to come up with multiple variations for the 'Jewel' in the combination mark and to pick the right typeface and colour family for the brand.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="./assets/images/works/uxahead 5.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/uxahead 6.png">
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/uxahead 3.png">
+    </div>
+     <div class="typography-image">
+        <img src="./assets/images/works/uxahead 7.png">
+    </div>
+    <h6 class="text-center"> Illustrations</h6>
+    <div class="typography-image">
+        <img src="./assets/images/works/uxahead 8.png">
+    </div>
+    <h6 class="text-center">Business Card</h6>
+    <div class="typography-image">
+        <img src="./assets/images/works/uxahead 9.png">
+    </div>
+    <div class="other-case-studies">
+        <div class="row">
+            <div class="col-md-6 left">
+                <h2>Other Case Studies</h2>
+                <div class="button">
+                    <div class="btn">See All Works <img src="./assets/images/home/red-arrow.png"></div>
+                </div>
+            </div>
+            <div class="col-md-6 right">
+                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
+                    <ngu-tile *nguCarouselDef="let item; let i = index">
+                        <div class="class">
+                            <div class="image">
+                                <img [src]="item.img">
+                            </div>
+                            <h3>{{ item.title }}</h3>
+                            <h4>{{ item.sub }}</h4>
+                        </div>
+                    </ngu-tile>
+                    <ul class="ngucarousel-indicator" NguCarouselPoint>
+                      <li *ngFor="let pointer of blogCarousel.pointNumbers; let i = index">
+                        <a (click)="blogCarousel.moveTo(i)" [class.active]="blogCarousel.activePoint == i">&nbsp;</a>
+                      </li>
+                    </ul>
+                </ngu-carousel>
+            </div>
+        </div>
+    </div>
+</div>
