responsive and icon fixes

--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -18,7 +18,7 @@
                     <h3>A product with good User Experience will Improve Productivity drastically</h3>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 right-layout">
                 <img src="./assets/images/services/image.png">
             </div>
         </div>
@@ -32,18 +32,18 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon1.svg"><span>Understanding Systems</span>
+                        <img src="./assets/images/services/icon-22.svg"><span>Understanding Systems</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon2.svg"><span>Backend Framework</span>
+                        <img src="./assets/images/services/icon-23.svg"><span>Backend Framework</span>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/icon4.svg"><span>API Web Service</span>
+                        <img src="./assets/images/services/icon-24.svg"><span>API Web Service</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon5.svg"><span>Scalability</span>
+                        <img src="./assets/images/services/icon-25.svg"><span>Scalability</span>
                     </div>
                 </div>
             </div>
@@ -54,14 +54,14 @@
             <div class="d-flex">
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
                   <li ngbNavItem="discussion">
-                    <a ngbNavLink><img src="./assets/images/services/icon6.svg">Implementation</a>
+                    <a ngbNavLink>Implementation</a>
                     <ng-template ngbNavContent>
                       <h2>Implementation</h2>
                       <p>We define the stubs in correlation with the Interface needs with scope for future enhancements with minimal changes. The API driven development allows us to integrate with multiple platforms and services in agile mode. We manage the code via Git repositories for a hassle free hand-over and deployment.</p>
                     </ng-template>
                   </li>
                   <li ngbNavItem="discovery">
-                    <a ngbNavLink><img src="./assets/images/services/icon7.svg">Testing & Support</a>
+                    <a ngbNavLink>Testing & Support</a>
                     <ng-template ngbNavContent>
                         <h2>Testing & Support</h2>
                         <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
