--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -18,7 +18,7 @@
                     <h3>Our expertise in Language and framework for multiple platforms</h3>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 right-layout">
                 <img src="./assets/images/services/image.png">
             </div>
         </div>
@@ -32,21 +32,21 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon1.svg"><span>Understanding Business</span>
+                        <img src="./assets/images/services/icon-17.svg"><span>Understanding Business</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon2.svg"><span>Platform</span>
+                        <img src="./assets/images/services/icon-19.svg"><span>Platform</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon3.svg"><span>Framework</span>
+                        <img src="./assets/images/services/icon-20.svg"><span>Framework</span>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/icon4.svg"><span>Manage</span>
+                        <img src="./assets/images/services/icon-18.svg"><span>Manage</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon5.svg"><span>Testing</span>
+                        <img src="./assets/images/services/icon-21.svg"><span>Testing</span>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="d-flex">
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
                   <li ngbNavItem="discussion">
-                    <a ngbNavLink><img src="./assets/images/services/icon6.svg">Understanding</a>
+                    <a ngbNavLink>Understanding</a>
                     <ng-template ngbNavContent>
                       <h2>Business Understanding</h2>
                       <p>When it comes to selecting a platform it can be challenging, since that defines how the product can or cannot expand in future without technical boundaries. We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
