--- a/src/app/modules/work/components/construction-portal/construction-portal.component.html
+++ b/src/app/modules/work/components/construction-portal/construction-portal.component.html
@@ -2,13 +2,13 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-5 ordertwo">
                     <div class="banner-header">
                         <h2>Repository of Accomplishments</h2>
                         <h6>UX <span>. UI .</span><span> Web .</span><span> B2C</span></h6>
                     </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-7 orderone">
                         <img src="./assets/images/works/construction0.png">
                 </div>
             </div>
