--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -2,13 +2,13 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 ordertwo">
                     <div class="banner-header">
                         <h2>To adapt organic food as a Lifestyle</h2>
                         <h6>UX <span>. UI .</span><span> Mobile</span></h6>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 orderone">
                     <div class="container">
                         <img src="./assets/images/works/mobile.png">
                     </div>
