--- a/src/app/modules/work/components/marketing/marketing.component.html
+++ b/src/app/modules/work/components/marketing/marketing.component.html
@@ -2,13 +2,13 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 ordertwo">
                     <div class="banner-header">
                         <h2>A Customer Advocacy Platform</h2>
                         <h6>UX <span>. UI .</span><span> Web .</span><span> B2B2C</span></h6>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 orderone">
                     <div class="container">
                         <img src="./assets/images/works/marketing1.png">
                     </div>
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="image">
-        <img src="./assets/images/works/marketing2.png">
+        <img src="./assets/images/works/marketing2.jpg">
     </div>
     <div class="approach">
         <div class="container">
