--- a/src/app/modules/work/components/uxahead/uxahead.component.html
+++ b/src/app/modules/work/components/uxahead/uxahead.component.html
@@ -1,7 +1,7 @@
 <div class="works">
     <div class="banner">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 ordertwo">
                     <div class="container">
                     <div class="banner-header">
                         <h2>Website for Startup</h2>
@@ -9,7 +9,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 orderone">
                     <img src="./assets/images/works/uxahead 1.png">
                 </div>
             </div>
