--- a/src/app/modules/services/components/interface-design/interface-design.component.html
+++ b/src/app/modules/services/components/interface-design/interface-design.component.html
@@ -20,7 +20,7 @@
                         Establish a visual language for seamless interaction</h3>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 right-layout">
                 <img src="./assets/images/services/image.png">
             </div>
         </div>
@@ -34,24 +34,24 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon1.svg"><span>Moodboard</span>
+                        <img src="./assets/images/services/logo-11.svg"><span>Moodboard</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon2.svg"><span>Visual Language</span>
+                        <img src="./assets/images/services/logo-12.svg"><span>Visual Language</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon3.svg"><span>Iconography</span>
+                        <img src="./assets/images/services/logo-13.svg"><span>Iconography</span>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/icon4.svg"><span>Design systems</span>
+                        <img src="./assets/images/services/logo-14.svg"><span>Design systems</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon5.svg"><span>Illustrations</span>
+                        <img src="./assets/images/services/logo-15.svg"><span>Illustrations</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon5.svg"><span>Brand identity</span>
+                        <img src="./assets/images/services/logo-16.svg"><span>Brand identity</span>
                     </div>
                 </div>
             </div>
@@ -62,28 +62,78 @@
             <div class="d-flex">
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
                   <li ngbNavItem="discussion">
-                    <a ngbNavLink><img src="./assets/images/services/icon6.svg">Design</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6451" data-name="Group 6451" transform="translate(-9109 -470)">
+                              <g id="Group_5751" data-name="Group 5751" transform="translate(8815 -2938)">
+                                <rect id="Rectangle_4386" data-name="Rectangle 4386" width="24" height="24" transform="translate(302 3416)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9486" data-name="Path 9486" d="M2793.531,12997.733v12.78h-3.454v10.205" transform="translate(-2478.037 -9581.294)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9487" data-name="Path 9487" d="M2810.073,13002.124s2.287,2.05,4.316,0" transform="translate(-2504 -9578)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                                <path id="Path_9488" data-name="Path 9488" d="M2810.072,13002.123s7.242,6.492,13.667,0" transform="translate(-2503 -9570)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                                <g id="Rectangle_4387" data-name="Rectangle 4387" transform="translate(318 3423)" fill="none" stroke="currentColor" stroke-width="2">
+                                  <rect width="4" height="4" rx="2" stroke="none"/>
+                                  <rect x="1" y="1" width="2" height="2" rx="1" fill="none"/>
+                                </g>
+                              </g>
+                            </g>
+                          </svg>
+                        Design</a>
                     <ng-template ngbNavContent>
                       <h2>User Interface Design</h2>
                       <p>The Interface Design is the skeleton on which all the components are to be laid, it also pays way for a Responsive Design when it spans across devices; making it with at most precision helps speed up the Development process and by making reusable components wherever possible.</p>
                     </ng-template>
                   </li>
                   <li ngbNavItem="discovery">
-                    <a ngbNavLink><img src="./assets/images/services/icon7.svg">Evaluation</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6458" data-name="Group 6458" transform="translate(-9262 -536)">
+                              <g id="Icon_feather-smartphone" data-name="Icon feather-smartphone" transform="translate(9266.5 541)">
+                                <path id="Path_9474" data-name="Path 9474" d="M9.884,3H21.8a2.384,2.384,0,0,1,2.384,2.384V24.455A2.384,2.384,0,0,1,21.8,26.839H9.884A2.384,2.384,0,0,1,7.5,24.455V5.384A2.384,2.384,0,0,1,9.884,3Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9475" data-name="Path 9475" d="M18,27h1.376" transform="translate(-2.599 -3.929)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9476" data-name="Path 9476" d="M11.23,13.709,13.6,16.077l5.156-5.156" transform="translate(0.85 -0.103)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                              </g>
+                            </g>
+                          </svg>
+                        Evaluation</a>
                     <ng-template ngbNavContent>
                     <h2>User Interface Evaluation</h2>
                       <p>Evaluating user interface design every once in a while will give us insights and ideas about enhancing design and business based on user’s feedback and analytics insights. Funnelling the areas of impact and enhancing the design helps the improve the overall customer satisfaction of the website or application.</p>
                     </ng-template>
                   </li>
                   <li ngbNavItem="solution">
-                    <a ngbNavLink><img src="./assets/images/services/icon8.svg">Visual Design</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6457" data-name="Group 6457" transform="translate(-9336 -523)">
+                              <g id="Group_5753" data-name="Group 5753" transform="translate(9047.258 -2883)">
+                                <path id="Path_9489" data-name="Path 9489" d="M12.379,0c6.837,0,12.379,5.8,12.379,5.8s-5.542,5.8-12.379,5.8S0,5.8,0,5.8,5.542,0,12.379,0Z" transform="translate(296.742 3420.5)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"/>
+                                <g id="Ellipse_1155" data-name="Ellipse 1155" transform="translate(303 3420)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2">
+                                  <circle cx="6.5" cy="6.5" r="6.5" stroke="none"/>
+                                  <circle cx="6.5" cy="6.5" r="5.5" fill="none"/>
+                                </g>
+                                <g id="Ellipse_1156" data-name="Ellipse 1156" transform="translate(307 3424)" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2">
+                                  <circle cx="2.5" cy="2.5" r="2.5" stroke="none"/>
+                                  <circle cx="2.5" cy="2.5" r="1.5" fill="none"/>
+                                </g>
+                              </g>
+                            </g>
+                          </svg>
+                        Visual Design</a>
                     <ng-template ngbNavContent>
                       <h2>Visual Design System</h2>
                         <p>The standard that define the companies branding in reference to Theme/Colour usage, fonts styles, visuals in accordance with the Product Topography even extending to tone and grammar. A well defined interface brings attention and notice to the Product even among thousands of other brands.</p>
                     </ng-template>
                   </li>
                   <li ngbNavItem="test">
-                    <a ngbNavLink><img src="./assets/images/services/icon9.svg">Branding & Identity</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6456" data-name="Group 6456" transform="translate(-9421 -510)">
+                              <g id="Group_5752" data-name="Group 5752" transform="translate(8447.5 -1077.5)">
+                                <path id="Icon_open-flag" data-name="Icon open-flag" d="M9,0V12h6v3H27L21,9.09,27,3H18V0Z" transform="translate(977.5 1595.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <line id="Line_126" data-name="Line 126" y2="24" transform="translate(983.5 1595.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                              </g>
+                            </g>
+                          </svg>
+                        Branding & Identity</a>
                     <ng-template ngbNavContent>
                         <h2>Branding & Identity</h2>
                         <p>A great product demands individuality; as per studies, “it is often said that customers form an opinion about a Company/Product within seconds. A well-designed logo is an easy way to convey to potential customers that your business is professional, trustworthy, and provides quality goods or services”. In short it defines the personality of the Product!</p>
@@ -94,5 +144,69 @@
                 <div [ngbNavOutlet]="nav" class="ml-4 px-5"></div>
               </div>
         </div>
+    </div>
+    <div class="service-layout3-responsive">
+      <ngb-accordion [closeOthers]="true" activeIds="static-1">
+        <ngb-panel id="static-1"  >  
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div> User Interface Design </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template> 
+          <ng-template ngbPanelContent >
+           <div class="row">
+              <div class="col-md-6 design-left">
+                <p>The Interface Design is the skeleton on which all the components are to be laid, it also pays way for a Responsive Design when it spans across devices; making it with at most precision helps speed up the Development process and by making reusable components wherever possible.</p>
+              </div>
+           </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-2">
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div><h2>User Interface Evaluation</h2></div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template> 
+           <ng-template ngbPanelContent>
+              <div class="row">
+                 <div class="col-md-6 design-left">
+                  <p>Evaluating user interface design every once in a while will give us insights and ideas about enhancing design and business based on user’s feedback and analytics insights. Funnelling the areas of impact and enhancing the design helps the improve the overall customer satisfaction of the website or application.</p>
+                 </div>
+              </div>
+           </ng-template>
+         </ngb-panel>
+         <ngb-panel id="static-3">
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div><h2>Visual Design System</h2></div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template>
+           <ng-template ngbPanelContent>
+              <div class="row">
+                 <div class="col-md-6 design-left">
+                  <p>The standard that define the companies branding in reference to Theme/Colour usage, fonts styles, visuals in accordance with the Product Topography even extending to tone and grammar. A well defined interface brings attention and notice to the Product even among thousands of other brands.</p>
+                 </div>
+              </div>
+           </ng-template>
+         </ngb-panel>
+         <ngb-panel id="static-4">
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div><h2>Branding & Identity</h2></div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template>
+           <ng-template ngbPanelContent>
+              <div class="row">
+                 <div class="col-md-6 design-left">
+                  <p>A great product demands individuality; as per studies, “it is often said that customers form an opinion about a Company/Product within seconds. A well-designed logo is an easy way to convey to potential customers that your business is professional, trustworthy, and provides quality goods or services”. In short it defines the personality of the Product!</p>
+                 </div>
+              </div>
+           </ng-template>
+         </ngb-panel>
+      </ngb-accordion>
     </div>
 </div>
