--- a/src/app/modules/services/components/usability-testing/usability-testing.component.scss
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.scss
@@ -1,3 +1,6 @@
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
 .services{
     padding: 50px 0px;
 .banner{
@@ -7,6 +10,9 @@
     position: relative;
     top: -53px;
     height: 770px;
+    @include media-breakpoint-down(sm){
+        background-position: center;
+    }
     h1{
         font-size: 56px;
         color: #000000;
@@ -28,9 +34,17 @@
        background-color: #FF424B;
        color: #FFFFFF;
        padding: 285px 0px;
+       @include media-breakpoint-down(sm){
+        padding: 150px 0px;
+       }
        h3{
            font-size: 48px;
        }
+    }
+    .right-layout{
+        @include media-breakpoint-down(sm){
+            display: none;
+        }
     }
     .col-md-6{
         padding-left: 0px !important;
@@ -54,15 +68,21 @@
         margin-top: 60px;
     }
     .list{
-        padding: 50px 30px;
+        padding: 30px;
+        @include media-breakpoint-down(sm){
+            padding: 12px;
+        }
         span{
             font-size: 24px;
-            margin-left: 20px;
+            margin-left: 5px;
             font-weight: 200;
         }
     }
 }
 .service-layout3{
+    @include media-breakpoint-down(sm){
+        display: none;
+    }
     background-color: #FCFCFC;
     padding: 150px 0px;
     color: #282829;
@@ -72,6 +92,7 @@
         cursor: pointer;
         svg{
             margin-right: 10px;
+            margin-top: 7px;
         }
     }
     h2{
@@ -88,18 +109,86 @@
     }
 }
 }
+.service-layout3-responsive{
+    display: none;
+}
+
+@include media-breakpoint-down(sm) {
+
+    .service-layout3-responsive{
+        margin-top: 150px;
+        display: block;
+        ::ng-deep{
+            .card{
+                background-color: #FFFFFF !important;
+            }
+        }
+        ::ng-deep{
+        .card-header {
+            background-color: #FFFFFF !important;
+        }
+        .btn-link:hover {
+            color: #FF424B;
+            font-size: 20px;
+        
+        }
+        .btn-link {
+            font-size: 20px;
+            font-weight: 700; 
+            color: #FF424B;
+            text-decoration: none;
+            width: 100%;
+        }
+        .dis_flex{
+            display:flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .btn:focus  {
+             outline: 0;
+             box-shadow: none !important; 
+        }
+        .collapsed .arrow_rotate{
+            -ms-transform: rotate(180deg);  
+            transform: rotate(180deg);
+        }
+    }
+    h2{
+        font-size: 20px;
+        color: #282829;
+    }
+    .design-left{
+        padding: 40px 20px;
+            p{
+                font-size: 20px;
+                color: #282829;
+                padding-top: 10px;
+            }
+            .li{
+                font-size: 20px;
+                margin-top: 6px;
+            }
+        }
+    }
+}
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
     background-color: #FCFCFC;
     color: #FF424B;
     font-size: 36px;
     font-weight: 600;
 }
-.nav-pills a{
-    color: #282829;
+.nav-pills{
+    width: 150%;
+}
+.tab-content{
+    width: 200%;
 }
 .nav-link{
     display: flex;
-    padding: 0.5rem 15rem 1rem 0.5rem;
+    padding: 0 20px 40px 20px;
+}
+.nav-pills a{
+    color: #282829;
 }
 .flex-column{
     padding: 75px 0px;
