--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -1,11 +1,23 @@
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
 h2{
     font-size: 56px;
+    @include media-breakpoint-down(sm) {
+        font-size: 36px;
+    }
 }
 p{
     font-size: 24px;
+    @include media-breakpoint-down(sm) {
+        font-size: 20px;
+    }
 }
 h6{
     font-size: 36px;
+    @include media-breakpoint-down(sm) {
+        font-size: 28px;
+    }
 }  
     .banner{
         background-color: #6DAFD8;
@@ -159,3 +171,10 @@ h6{
     border-radius: 15px;
     box-shadow: none !important;
 }
+@include media-breakpoint-down(sm) {
+    .banner{
+        img{
+            width: 100%;
+        }
+    }
+    }
