--- a/src/app/modules/work/components/networking/networking.component.html
+++ b/src/app/modules/work/components/networking/networking.component.html
@@ -2,13 +2,13 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 ordertwo">
                     <div class="banner-header">
                         <h2>Digital Transformation for Telcom</h2>
                         <h6>UX <span>. UI .</span><span> Mobile .</span><span> B2C</span></h6>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 orderone">
                     <div class="container">
                         <img src="./assets/images/works/net.png">
                     </div>
