--- a/src/app/modules/work/components/skill-development/skill-development.component.html
+++ b/src/app/modules/work/components/skill-development/skill-development.component.html
@@ -2,13 +2,13 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 ordertwo">
                     <div class="banner-header">
                         <h2>A designers platform for creative upskill</h2>
                         <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 orderone">
                     <div class="container">
                         <img src="./assets/images/works/skill1.png">
                     </div>
