--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@
 @import './scss/bootstrap.scss';
 @import './scss/bootstrap-custom.scss';
 
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap');
 
@@ -42,3 +45,11 @@ body { margin: 0; font-family: 'Inter', sans-serif; }
 }
 // /* Importing Bootstrap SCSS file. */
 // @import '~bootstrap/scss/bootstrap';
+@include media-breakpoint-down(sm) {
+    .orderone{
+        order: 1;
+    }
+    .ordertwo{
+        order: 2;
+    }
+}
