--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -1,1 +1,42 @@
-<p>career works!</p>
+<div class="career">
+    <div class="banner">
+       <div class="container">
+          <div class="career-layout1">
+             <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
+             <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
+          </div>
+       </div>
+    </div>
+    <div class="career-layout">
+       <div class="container">
+          <div class="career-design">
+             <h2>Open opportunities</h2>
+             <hr>
+             <div class="row designer ">
+                <div class="col-md-5">
+                   <h1>UI Designer</h1>
+                </div>
+                <div class="col-md-3 only-mobile">
+                   <h6>Experience <br>2 to 4 years</h6>
+                </div>
+                <div class="col-md-4 only-mobile">
+                   <h6>Location<br>chennai, India</h6>
+                </div>
+             </div>
+             <hr>
+             <div class="row designer">
+                <div class="col-md-5">
+                   <h1>Ux Designer</h1>
+                </div>
+                <div class="col-md-3 only-mobile">
+                   <h6>Experience <br>5 to 10 years</h6>
+                </div>
+                <div class="col-md-4 only-mobile">
+                   <h6>Location<br>chennai, India</h6>
+                </div>
+             </div>
+             <hr>
+          </div>
+       </div>
+    </div>
+ </div>
